# everything

./: .gitignore  AGENTS.md  GEMINI.md  README.md  create_bin_dir.py  dll_list.py  everything_dll_list.py  everything_file_list.py  everything_subprocess_list.py  everything_test_selftest.py  file_list.py  pyproject.toml  test_dll_list.py  test_es.py  test_everything_dll_list.py  test_everything_file_list_testmode.py  test_file_list.py
.github/workflows/: python-package.yml
docs/: Everything64.md  example-output-es.md  exported_functions.md  project_review_summary.md  running_tests.md
docs/dll/: draft.md  reference.md
docs/dll/tools/: add_heading_anchors.py  add_toc.py  autolink_functions.py  build_reference.py
everything_cli/: dll.py  es.py  run_tests.py
pyeverything/: __init__.py  __main__.py  dll.py  dll_class.py  es.py  everything.py  http.py  tui.css  tui.py
test/: test_dll.py  test_es.py  test_http.py
tests/: integration_test_everything.py  test_cli_connectivity.py  test_cli_connectivity_es.py  test_dll.py  test_dll_class_testmode.py  test_es.py  test_everything.py  test_http.py  test_integration_dll.py  test_integration_dll_class.py  test_integration_dll_load.py  test_integration_dll_steps.py  test_integration_es.py  test_integration_everything.py
tests/dll/: test_dll.py  test_dll_class.py  test_dll_class_testmode.py  test_dll_cli.py  test_everything.py  test_integration_dll.py  test_integration_dll_class.py  test_integration_everything.py
tests/es/: test_cli_connectivity_es.py
tests/http/: test_http.py  test_integration_http.py
