[tool.poetry]
name = "everything-cli"
include = ["everything_cli/Everything64.dll"]
version = "0.1.0"
description = "A CLI tool for interacting with Everything search engine"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
everything-dll = "everything_cli.dll:main"
everything-es = "everything_cli.es:main"
everything-http = "everything_cli.http:main"
test = "pytest"
