[tool.poetry]
name = "pyeverything"
include = ["pyeverything/bin/"]
version = "0.1.0"
description = "A CLI tool for interacting with Everything search engine"
authors = ["Takashi Sasaki <takashi316@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
textual = "^0.70.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
everything-dll = "pyeverything.dll:main"
everything-es = "pyeverything.es:main"
everything-http = "pyeverything.http:main"



[tool.poetry.group.dev.dependencies]
poetry = "^1.8.2"
pytest = "^8.2.2"
flake8 = "*"
pytest-asyncio = "^0.23.7"
pytest-textual-snapshot = "^0.1.0"
